--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -11,7 +11,171 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+    <form onsubmit="onSubmit()" action="submit">
+      <fieldset class="block">
+        <legend>Personal information</legend>
+        <ul>
+          <li class="item">
+            <label for="surname">
+              Surname:
+              <input
+                type="text"
+                name="surname"
+                id="surname"
+                autocomplete="off"
+                required
+                maxlength="12"
+              >
+            </label>
+          </li>
+          <li class="item">
+            <label for="name">
+              Name:
+              <input
+                type="text"
+                name="name"
+                id="name"
+                autocomplete="off"
+                required
+                minlength="2"
+              >
+            </label>
+          </li>
+          <li class="item">
+            <label for="old">
+              How old are You?
+              <input
+                type="number"
+                name="old"
+                id="old"
+                value="12"
+                min="12"
+                max="100"
+              >
+            </label>
+          </li>
+          <li class="item">
+            <label for="birthday"
+              >Full date of birthday
+              <input
+                type="date"
+                name="birthday"
+                placeholder="mn / dd / yyyy"
+                id="birthday"
+              >
+            </label>
+          </li>
+          <li class="item">
+            <label for="agree"
+              >I accept the term of the agreement
+              <input type="checkbox" name="agree" id="agree">
+            </label>
+          </li>
+        </ul>
+      </fieldset>
+
+      <fieldset class="block">
+        <legend>Registration</legend>
+        <ul>
+          <li class="item">
+            <label for="email"
+              >E-mail:
+              <input
+                type="email"
+                name="email"
+                placeholder="email@example.com"
+                id="email"
+                required
+              >
+            </label>
+          </li>
+          <li class="item">
+            <label for="password">
+              Password:
+              <input type="password" name="password"
+              id="password" required>
+            </label>
+          </li>
+        </ul>
+      </fieldset>
+
+      <fieldset class="block">
+        <legend>An interesting fact about you!</legend>
+        <ul>
+          <li class="item">
+            <label for="answer1"
+              >Do you love cats?
+              <span>
+                <input type="radio" name="answer" id="answer1"> Yes
+              </span>
+            </label>
+            <label for="answer2">
+              <span><input type="radio" name="answer" id="answer2"> No </span>
+            </label>
+          </li>
+          <li class="item">
+            <label for="color">
+              What is your favorite color?
+              <input type="color" name="color" id="color">
+            </label>
+          </li>
+          <li class="item">
+            <label for="time">
+              What time do you go to bed?
+              <input type="time" name="time" value="--:--:-- --"
+              id="time">
+            </label>
+          </li>
+          <li class="item">
+            <label for="favoriteCars">
+              What are your favorite brand of cars?
+              <select name="cars" id="favoriteCars" multiple>
+                <option value="BMW">BMW</option>
+                <option value="Audi">Audi</option>
+                <option value="Lada">Lada</option>
+                <option value="default"></option>
+              </select>
+            </label>
+          </li>
+          <li class="item">
+            <label for="work">
+              How do you rate our work?
+              <input type="range" name="work" id="work"
+              value="0">
+            </label>
+          </li>
+        </ul>
+      </fieldset>
+
+      <fieldset class="block">
+        <legend>Aditional info:</legend>
+        <ul>
+          <li class="item">
+            <label for="comments">
+              Comments:
+              <textarea
+                name="comments"
+                id="comments"
+                cols="20"
+                rows="2"
+              ></textarea>
+            </label>
+          </li>
+          <li class="item">
+            <label for="recommendUs">
+              Would you recommend us?
+              <select name="recommend" id="recommendUs">
+                <option value="yes">yes</option>
+                <option value="no">no</option>
+              </select>
+            </label>
+          </li>
+        </ul>
+      </fieldset>
+      <label for="submit">
+        <input type="submit" value="Submit" id="submit">
+      </label>
+    </form>
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
