--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <form onsubmit="onSubmit()" action="submit">
+    <form onsubmit="onSubmit()" action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="get">
       <fieldset class="block">
         <legend>Personal information</legend>
         <ul>
