--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,13 @@
       method="get"
     >
       <fieldset class="block">
-        <legend class="item">
+        <legend>
           Personal information
         </legend>
-        <label for="surname">
+        <label
+        for="surname"
+        class="item"
+        >
           Surname:
           <input
             type="text"
@@ -31,7 +34,10 @@
             maxlength="12"
           >
         </label>
-        <label for="name">
+        <label
+        for="name"
+         class="item"
+         >
           Name:
           <input
             type="text"
@@ -42,7 +48,10 @@
             minlength="2"
           >
         </label>
-        <label for="old">
+        <label
+        for="old"
+        class="item"
+        >
           How old are You?
           <input
             type="number"
@@ -53,7 +62,10 @@
             max="100"
           >
         </label>
-        <label for="birthday">
+        <label
+         for="birthday"
+          class="item"
+          >
           Full date of birthday
           <input
             type="date"
@@ -62,7 +74,10 @@
             id="birthday"
           >
         </label>
-        <label for="agree">
+        <label
+        for="agree"
+        class="item"
+        >
           I accept the term of the agreement
           <input
           type="checkbox"
@@ -73,10 +88,13 @@
       </fieldset>
 
       <fieldset class="block">
-        <legend class="item">
+        <legend>
           Registration
         </legend>
-        <label for="email">
+        <label
+        for="email"
+         class="item"
+         >
           E-mail:
           <input
             type="email"
@@ -86,7 +104,10 @@
             required
           >
         </label>
-        <label for="password">
+        <label
+         for="password"
+          class="item"
+          >
           Password:
           <input
           type="password"
@@ -97,11 +118,13 @@
       </fieldset>
 
       <fieldset class="block">
-        <legend
-        class="item">
+        <legend class="item">
         An interesting fact about you!
         </legend>
-        <label for="answer1">
+        <label
+        for="answer1"
+         class="item"
+         >
           Do you love cats?
           <span>
             <input
@@ -112,7 +135,10 @@
             Yes
           </span>
         </label>
-        <label for="answer2">
+        <label
+         for="answer2"
+          class="item"
+          >
           <span>
             <input
             type="radio"
@@ -122,7 +148,10 @@
             No
           </span>
         </label>
-        <label for="color">
+        <label
+        for="color"
+        class="item"
+        >
           What is your favorite color?
           <input
           type="color"
@@ -130,7 +159,10 @@
            id="color"
            >
         </label>
-        <label for="time">
+        <label
+        for="time"
+        class="item"
+        >
           What time do you go to bed?
           <input
           type="time"
@@ -139,9 +171,16 @@
            id="time"
            >
         </label>
-        <label for="favoriteCars">
+        <label
+         for="favoriteCars"
+          class="item"
+          >
           What are your favorite brand of cars?
-          <select name="cars" id="favoriteCars" multiple>
+          <select
+          name="cars"
+           id="favoriteCars"
+            multiple
+            >
             <option value="BMW">
               BMW
             </option>
@@ -155,7 +194,10 @@
             </option>
           </select>
         </label>
-        <label for="work">
+        <label
+        for="work"
+         class="item"
+         >
           How do you rate our work?
           <input
            type="range"
@@ -167,10 +209,13 @@
       </fieldset>
 
       <fieldset class="block">
-        <legend class="item">
+        <legend>
           Aditional info:
         </legend>
-        <label for="comments">
+        <label
+        for="comments"
+         class="item"
+         >
           Comments:
           <textarea
           name="comments"
@@ -180,7 +225,10 @@
             >
           </textarea>
         </label>
-        <label for="recommendUs">
+        <label
+         for="recommendUs"
+         class="item"
+         >
           Would you recommend us?
           <select
           name="recommend"
@@ -195,7 +243,10 @@
           </select>
         </label>
       </fieldset>
-      <label for="submit">
+      <label
+      for="submit"
+      class="item"
+      >
         <input
         type="submit"
         value="Submit"
