--- a/src/index.html
+++ b/src/index.html
@@ -118,36 +118,36 @@
       </fieldset>
 
       <fieldset class="block">
-        <legend class="item">
+        <legend>
         An interesting fact about you!
         </legend>
-        <label
+        <div class="item">
+          <label
         for="answer1"
-         class="item"
          >
           Do you love cats?
-          <span>
-            <input
+            <span>
+              <input
             type="radio"
             name="answer"
             id="answer1"
             >
             Yes
-          </span>
-        </label>
-        <label
+            </span>
+          </label>
+          <label
          for="answer2"
-          class="item"
           >
-          <span>
-            <input
-            type="radio"
+            <span>
+              <input
+              type="radio"
             name="answer"
              id="answer2"
              >
             No
-          </span>
-        </label>
+            </span>
+          </label>
+        </div>
         <label
         for="color"
         class="item"
