--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
           Personal information
         </legend>
         <label
-        for="surname"
-        class="item"
+          for="surname"
+          class="item"
         >
           Surname:
           <input
@@ -35,9 +35,9 @@
           >
         </label>
         <label
-        for="name"
-         class="item"
-         >
+          for="name"
+          class="item"
+        >
           Name:
           <input
             type="text"
@@ -49,8 +49,8 @@
           >
         </label>
         <label
-        for="old"
-        class="item"
+          for="old"
+          class="item"
         >
           How old are You?
           <input
@@ -63,9 +63,9 @@
           >
         </label>
         <label
-         for="birthday"
+          for="birthday"
           class="item"
-          >
+        >
           Full date of birthday
           <input
             type="date"
@@ -75,14 +75,14 @@
           >
         </label>
         <label
-        for="agree"
-        class="item"
+          for="agree"
+          class="item"
         >
           I accept the term of the agreement
           <input
-          type="checkbox"
-          name="agree"
-          id="agree"
+            type="checkbox"
+            name="agree"
+            id="agree"
           >
         </label>
       </fieldset>
@@ -92,9 +92,9 @@
           Registration
         </legend>
         <label
-        for="email"
-         class="item"
-         >
+          for="email"
+          class="item"
+        >
           E-mail:
           <input
             type="email"
@@ -105,82 +105,79 @@
           >
         </label>
         <label
-         for="password"
+          for="password"
           class="item"
-          >
+        >
           Password:
           <input
-          type="password"
-          name="password"
-          id="password"
-          required >
+            type="password"
+            name="password"
+            id="password"
+            required
+          >
         </label>
       </fieldset>
 
       <fieldset class="block">
         <legend>
-        An interesting fact about you!
+          An interesting fact about you!
         </legend>
         <div class="item">
-          <label
-        for="answer1"
-         >
-          Do you love cats?
+          <label for="answer1">
+            Do you love cats?
             <span>
               <input
-            type="radio"
-            name="answer"
-            id="answer1"
-            >
-            Yes
+                type="radio"
+                name="answer"
+                id="answer1"
+              >
+              Yes
             </span>
           </label>
-          <label
-         for="answer2"
-          >
+          <label for="answer2">
             <span>
               <input
-              type="radio"
-            name="answer"
-             id="answer2"
-             >
-            No
+                type="radio"
+                name="answer"
+                id="answer2"
+              >
+              No
             </span>
           </label>
         </div>
         <label
-        for="color"
-        class="item"
+          for="color"
+          class="item"
         >
           What is your favorite color?
           <input
-          type="color"
-           name="color"
-           id="color"
-           >
+            type="color"
+            name="color"
+            id="color"
+          >
         </label>
         <label
-        for="time"
-        class="item"
+          for="time"
+          class="item"
         >
           What time do you go to bed?
           <input
-          type="time"
-          name="time"
-          value="--:--:-- --"
-           id="time"
-           >
+            type="time"
+            name="time"
+            value="--:--:-- --"
+            id="time"
+          >
         </label>
         <label
-         for="favoriteCars"
-          class="item"
-          >
+          for="favoriteCars"
+           class="item"
+        >
           What are your favorite brand of cars?
           <select
-          name="cars"
-           id="favoriteCars"
+            name="cars"
+            id="favoriteCars"
             multiple
-            >
+          >
             <option value="BMW">
               BMW
             </option>
@@ -190,21 +187,19 @@
             <option value="Lada">
               Lada
             </option>
-            <option value="default">
-            </option>
           </select>
         </label>
         <label
-        for="work"
-         class="item"
-         >
+          for="work"
+          class="item"
+        >
           How do you rate our work?
           <input
-           type="range"
-           name="work"
-          id="work"
-           value="0"
-           >
+            type="range"
+            name="work"
+            id="work"
+            value="0"
+          >
         </label>
       </fieldset>
 
@@ -213,27 +208,27 @@
           Aditional info:
         </legend>
         <label
-        for="comments"
-         class="item"
-         >
+          for="comments"
+          class="item"
+        >
           Comments:
           <textarea
-          name="comments"
-           id="comments"
+            name="comments"
+            id="comments"
             cols="20"
             rows="2"
-            >
+          >
           </textarea>
         </label>
         <label
-         for="recommendUs"
-         class="item"
-         >
+          for="recommendUs"
+          class="item"
+        >
           Would you recommend us?
           <select
-          name="recommend"
-           id="recommendUs"
-           >
+            name="recommend"
+             id="recommendUs"
+          >
             <option value="yes">
               yes
             </option>
@@ -244,20 +239,20 @@
         </label>
       </fieldset>
       <label
-      for="submit"
-      class="item"
+        for="submit"
+        class="item"
       >
         <input
-        type="submit"
-        value="Submit"
-        id="submit"
+          type="submit"
+          value="Submit"
+          id="submit"
         >
       </label>
     </form>
     <script
-     type="text/javascript"
-     src="./main.js"
-     >
+      type="text/javascript"
+      src="./main.js"
+      >
     </script>
   </body>
 </html>
