--- a/src/index.html
+++ b/src/index.html
@@ -238,16 +238,7 @@
           </select>
         </label>
       </fieldset>
-      <label
-        for="submit"
-        class="item"
-      >
-        <input
-          type="submit"
-          value="Submit"
-          id="submit"
-        >
-      </label>
+      <button type="submit">Submit</button>
     </form>
     <script
       type="text/javascript"
